CLDR-13140 change from javax.xml.bind.DatatypeConverter to java.util.Base64 (#81)
- follow on to [CLDR-5507] in f5262780b999a48220e96639bcee6a0e1ec3a47a